bin_PROGRAMS = ss_Service
ss_Service_SOURCES=main.cpp global.cpp arg_parser/carg_parser.cpp udp/udp_port.cpp \
				console_out.cpp \
				auto_config.h\
				ICAppLayer/ICAppLayer.cpp\
				ICAppLayer/cmd.cpp\
				ICAppLayer/cmd.h\
				ICAppLayer/FunctionNode/FunctionNode.cpp\
				ICAppLayer/FunctionNode/param_desc.cpp\
				Functions/CommonFuncs.cpp\
				Functions/SpecFuncs.cpp\
				Functions/functions.cpp\
				buffer/ssBuffer.cpp\
				buffer/buffer.cpp\
				console_out.h\
				global.h\
				arg_parser/carg_parser.h\
				udp/udp_port.h\
				ICAppLayer/ICAppLayer.h\
				ICAppLayer/FunctionNode/param_desc.h\
				Functions/CommonFuncs.h\
				Functions/SpecFuncs.h\
				Functions/functions.h\
				SIG_handler.cpp\
				SIG_handler.h\
				crc16.cpp crc16.h
