bin_PROGRAMS = ss_Service
ss_Service_SOURCES=main.cpp global.cpp arg_parser/carg_parser.cpp  \
				console_out.cpp \
				auto_config.h\
				ICAppLayer/ICAppLayer.cpp\
				ICAppLayer/FunctionNode/FunctionNode.cpp\
				ICAppLayer/FunctionNode/param_desc.cpp\
				Functions/CommonFuncs.cpp\
				Functions/SpecFuncs.cpp\
				Functions/functions.cpp\
				buffer/ssBuffer.cpp\
				buffer/buffer.cpp\
				console_out.h\
				global.h\
				arg_parser/carg_parser.h\
				ICAppLayer/ICAppLayer.h\
				ICAppLayer/FunctionNode/param_desc.h\
				Functions/CommonFuncs.h\
				Functions/SpecFuncs.h\
				Functions/functions.h\
				SIG_handler.cpp\
				SIG_handler.h\
				deqUdp/deqUdp.cpp deqUdp/deqUdp.h\
				../../crc/crc16.cpp ../../crc/crc16.h\
				../../udp_port/udp_port.cpp ../../udp_port/udp_port.h\
				../../rcsLib/rcsCmd/rcsCmd.cpp ../../rcsLib/rcsCmd/rcsCmd.h\
cm688_packet/cm688_packet.cpp\
cm688_packet/cm688_packet.h\
cm688_packet/statusFrame.cpp\
cm688_packet/statusFrame.h\
cm688_packet/cmdFrame.cpp\
cm688_packet/cmdFrame.h\
../../ortsTypes/ortsTypes.cpp\
../../ortsTypes/ortsTypes.h

ss_Service_LDFLAGS=-pthread
