bin_PROGRAMS = ss_Service
ss_Service_SOURCES=main.cpp global.cpp arg_parser/carg_parser.cpp  \
				console_out.cpp \
				auto_config.h\
				srvAppLayer/srvAppLayer.cpp\
				srvAppLayer/FunctionNode/FunctionNode.cpp\
				srvAppLayer/FunctionNode/param_desc.cpp\
				Functions/CommonFuncsMgr.cpp\
				Functions/SpecFuncsMgr.cpp\
				Functions/functions.cpp\
				buffer/ssBuffer.cpp\
				buffer/buffer.cpp\
				console_out.h\
				global.h\
				arg_parser/carg_parser.h\
				ICAppLayer/ICAppLayer.h\
				ICAppLayer/FunctionNode/param_desc.h\
				Functions/CommonFuncs.h\
				Functions/SpecFuncs.h\
				Functions/functions.h\
				SIG_handler.cpp\
				SIG_handler.h\
				deqUdp/deqUdp.cpp deqUdp/deqUdp.h\
				../../rcsLib/crc/crc16.cpp ../../rcsLib/crc/crc16.h\
				../../rcsLib/udp_port/udp_port.cpp ../../rcsLib/udp_port/udp_port.h\
				../../rcsLib/rcsCmd/rcsCmd.cpp ../../rcsLib/rcsCmd/rcsCmd.h\
cm688_packet/cm688_packet.cpp\
cm688_packet/cm688_packet.h\
cm688_packet/statusFrame.cpp\
cm688_packet/statusFrame.h\
cm688_packet/cmdFrame.cpp\
cm688_packet/cmdFrame.h\
../../rcsLib/ortsTypes/ortsTypes.cpp\
../../rcsLib/ortsTypes/ortsTypes.h

ss_Service_LDFLAGS=-pthread
